new branch test-1 add script.js

--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
   <h1>Hi, this is flume</h1>
 
   <input type="text" placeholder="So Good">
+
+  <script src="script.js"></script>
 </body>
 </html>
